--- a/src/app/common/components/BrowserRoot.scss
+++ b/src/app/common/components/BrowserRoot.scss
@@ -44,4 +44,5 @@
 	-webkit-overflow-scrolling: touch;
 	box-sizing: border-box;
 	background-color: #F7F6F5;
+	z-index: 1;
 }
